[package]
name = "egui_grid"
version = "0.2.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Create grid-based layouts for egui"
authors = ["Mythitorium"]
readme = "README.md"
exclude = [
    "other/*",
    "grid-test/*"
]
repository = "https://github.com/mythitorium/egui-grid"
documentation = "https://docs.rs/egui_grid"

[dependencies]
egui = "0.22.0"
egui_extras = "0.22.0"
# eframe = "0.22.0" # debug & testing
