[package]
name = "egui_grid"
version = "0.4.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Create grid-based layouts for egui"
authors = ["Mythitorium"]
readme = "README.md"
exclude = [
    "other/*",
    "grid-test/*"
]
repository = "https://github.com/mythitorium/egui-grid"
documentation = "https://docs.rs/egui_grid"

[dependencies]
egui = "^0.24.1"
egui_extras = "^0.24.1"
# eframe = "0.22.0" # debug & testing
